--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
   <head>
     <title>Simple App</title>
-    <script src=".../bower_components/angular/angular.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <script src="../bower_components/angular/angular.js"></script>
     <script src="script.js"></script>
   </head>
 
