--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <a ng-click="subtract(1)" class="button alert">Subtract</a>
     <h4> Current Count: {{ counter }}</h4>
 </div>
+<a href="filters/index.html">Filters</a>
 
 </body>
 
