--- a/Directives/index.html
+++ b/Directives/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en" ng-app="myApp" ng-controller="CardController">
 <head>
-    <title>{{ user.name }} | Card Generator</title>
-    <script src="../bower_components/angular/angular.js"></script>
+    <title>{{ user.name }} | Card Generator - Directives</title>
     <link href="css/styles.css" rel="stylesheet">
-    <link href="../bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/directives.js"></script>
-    <script src="js/controllers.js"></script>
+    <link href="../bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">">
+    <script src="controllers/controllers.js"></script>
 </head>
 
 <body>
