--- a/filters/index.html
+++ b/filters/index.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="container">
-<a href="../chapter 10/index.html">Directives</a>
+<a href="../Directives/index.html">Directives</a>
 </div>
 
 
