--- a/Directives/index.html
+++ b/Directives/index.html
@@ -2,8 +2,11 @@
 <html lang="en" ng-app="myApp" ng-controller="CardController">
 <head>
     <title>{{ user.name }} | Card Generator - Directives</title>
+    <script src="../bower_components/angular/angular.js"></script>
     <link href="css/styles.css" rel="stylesheet">
-    <link href="../bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">">
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <link href="../bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="controllers/controllers.js"></script>
 </head>
 
@@ -251,8 +254,5 @@
         </div>
     </div>
 </div>
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../bower_components/angular/angular.min.js"></script>
 </body>
 </html>
