--- a/Directives/index.html
+++ b/Directives/index.html
@@ -253,6 +253,8 @@
             </div>
         </div>
     </div>
+    <div> <a href="../routing/index.html">Routing</a></div>
 </div>
+
 </body>
 </html>
