--- a/routing/index.html
+++ b/routing/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="weather">
 <head>
     <meta charset="UTF-8">
-    <meta name="fragment" content="!" />
+    <meta name="fragment" content="!"/>
     <title>My ng-book App</title>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css"/>
@@ -32,6 +32,10 @@
 </header>
 <div class="container">
     <div ng-view></div>
+    <div>
+        <a href="../services/index.html"> Services</a>
+    </div>
 </div>
+
 </body>
 </html>
