--- a/services/index.html
+++ b/services/index.html
@@ -11,7 +11,7 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="routes.js"></script>
     <script src="controller.js"></script>
-    <script src="service.js"></script>
+    <script src="services.js"></script>
 
 
 </head>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#index">Angular Routing</a>
+                <a class="navbar-brand" href="#index">Angular Service</a>
             </div>
 
             <ul class="nav navbar-nav navbar-right">
@@ -44,5 +44,8 @@
             </div>
         </div>
     </div>
+<div>
+    <a href=""></a>
+</div>
 </body>
 </html>
