--- a/Animation/index.html
+++ b/Animation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-    <title>Digest Loop</title>
+    <title>Animation</title>
     <script src="../bower_components/angular/angular.js"></script>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <script src="controller.js"></script>
@@ -12,24 +12,17 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand">Digest Loop and </a>
+                <a class="navbar-brand">Animation </a>
             </div>
         </div>
     </nav>
 </header>
 <div class="container">
-    <div ng-controller="MainCtrl">
-        <clickable foo="foo" bar="bar"></clickable>
-    </div>
 
-    <div ng-controller="UpdateCtrl">
-        <input ng-model="name"/> Name updated: {{updated}} times.
-    </div>
-</div>
 
 
 <div class="container">
-    <a href="../Animation/index.html">Animation</a>
+    <a href=""></a>
 </div>
 </body>
 </html>
