--- a/firebase/index.html
+++ b/firebase/index.html
@@ -36,7 +36,7 @@
     <ul id="past-visitors"></ul>
 </section>
     <div>
-        <a HREF="">Testing</a>
+        <a HREF="../Digest loop/index.html">Digest Loop</a>
     </div>
     </div>
 </body>
