--- a/Animation/index.html
+++ b/Animation/index.html
@@ -12,14 +12,14 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand">Animation </a>
+                <a class="navbar-brand">Animation</a>
             </div>
         </div>
     </nav>
 </header>
 <div class="container">
 
-
+</div>
 
 <div class="container">
     <a href=""></a>
