--- a/Animation/index.html
+++ b/Animation/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>Animation</title>
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <script src="controller.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,8 +19,36 @@
         </div>
     </nav>
 </header>
-<div class="container">
+<div class="container" ng-controller="mainController">
+    <header class="text-center">
+        <h1>Animating Angular Apps
+            <small>ngShow and ngHide</small>
+        </h1>
 
+        <!-- use ng-click to toggle true and false -->
+        <a class="btn btn-primary" href="#" ng-click="lions = !lions" ng-class="{ active: lions }">Toggle Lions</a>
+        <a class="btn btn-success" href="#" ng-click="cranes = !cranes" ng-class="{ active: cranes }">Toggle Cranes</a>
+    </header>
+
+    <div class="row">
+        <div class="col-xs-6">
+
+            <!-- show and hide the lion picture -->
+            <div class="jumbotron" ng-show="lions">
+                <img src="pics/1.jpg"
+                     class="img-responsive img-thumbnail">
+            </div>
+
+        </div>
+        <div class="col-xs-6">
+
+            <!-- show and hide the crane picture -->
+            <div class="jumbotron" ng-show="cranes">
+                <img src="pics/2.jpg" class="img-responsive img-thumbnail">
+            </div>
+
+        </div>
+    </div>
 </div>
 
 <div class="container">
