--- a/CORS/index.html
+++ b/CORS/index.html
@@ -5,8 +5,6 @@
     <meta name="fragment" content="!"/>
     <title>My ng-book App</title>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css"/>
-    <script src="../bower_components/font-awesome/css/font-awesome.css"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="routes.js"></script>
@@ -26,17 +24,16 @@
 </header>
 
 
-
 <div class="container ">
 
-<div ng-controller="ServiceController" class="col-md-8">
-  <label for="username">Type in a GitHub username</label>
-  <input class="col-md-6" type="text" ng-model="username" placeholder="Enter a GitHub username, like auser" />
-  <pre ng-show="username">{{ events }}</pre>
-</div>
-<div>
-    <a href="../firebase/index.html">FIREBASE</a>
-</div>
+    <div ng-controller="ServiceController" class="col-md-8">
+        <label>Type in a GitHub username</label>
+        <input class="col-md-6" type="text" ng-model="username" placeholder="Enter a GitHub username, like dkaranja"/>
+        <pre ng-show="username">{{ events }}</pre>
+    </div>
+    <div>
+        <a href="../firebase/index.html">FIREBASE</a>
+    </div>
 </div>
 
 </body>
