--- a/Animation/index.html
+++ b/Animation/index.html
@@ -24,21 +24,18 @@
         <h1>Animating Angular Apps
             <small>ngShow, ngClick and ngHide</small>
         </h1>
-        <a class="btn btn-primary" href="#" ng-click="lions = !lions" ng-class="{ active: lions }">Toggle Lions</a>
-        <a class="btn btn-success" href="#" ng-click="cranes = !cranes" ng-class="{ active: cranes }">Toggle Cranes</a>
+        <a class="btn btn-primary" href="#" ng-click="lions = !lions" ng-class="{ active: lions }">Toggle Charity</a>
+        <a class="btn btn-success" href="#" ng-click="cranes = !cranes" ng-class="{ active: cranes }">Toggle
+            Elephant</a>
     </header>
-
     <div class="row">
         <div class="col-xs-6">
             <div class="jumbotron" ng-show="lions">
                 <img src="pics/1.jpg"
                      class="img-responsive img-thumbnail">
             </div>
-
         </div>
         <div class="col-xs-6">
-
-            <!-- show and hide the crane picture -->
             <div class="jumbotron" ng-show="cranes">
                 <img src="pics/2.jpg" class="img-responsive img-thumbnail">
             </div>
@@ -46,8 +43,7 @@
         </div>
     </div>
 </div>
-
-<div class="container">
+<div class="">
     <a href=""></a>
 </div>
 </body>
