--- a/Animation/index.html
+++ b/Animation/index.html
@@ -46,5 +46,5 @@
     <a href=""></a>
 </div>
 </body>
-<script src="../bower_components/angular-animate/angular-animate.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-animate.js"></script>
 </html>
