--- a/Animation/index.html
+++ b/Animation/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Animation</title>
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <script src="controller.js"></script>
     <link rel="stylesheet" href="style.css">
